# spacepharer

./: CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
.github/: ISSUE_TEMPLATE.md
data/: CMakeLists.txt  createsetdb.sh  downloaddb.sh  downloadgbphage.sh  downloadgenome.sh  easypredict.sh  genbank_eukviruses_2018_09.tsv  genbank_phages_2018_09.tsv  phagegenome.txt  predictmatch.sh
examples/: JNGQ01000029.fas  SpacePHARER.ipynb  crisprdetect_test  crt_test  fasta_test  genome_list.tsv  genome_taxa.tsv  minced_test  pilercr_test  spacer_taxa.tsv
examples/ncbi_taxdump/: names.dmp  nodes.dmp
lib/mmseqs/src/commons/: Parameters.cpp
lib/mmseqs/src/multihit/: combinepvalperset.cpp
src/: CMakeLists.txt  LocalCommandDeclarations.h  spacepharer.cpp  whisper.cpp
src/commons/: LocalParameters.h
src/util/: CMakeLists.txt  CombineProtNuclAln.cpp  CombineScore.cpp  EmpiricalPval.cpp  FilterMatchbyFdr.cpp  FindPam.cpp  ParseSpacer.cpp  RestrictRanks.cpp  ReverseSeqByCodon.cpp  SummarizeResults.cpp  TruncateBestHits.cpp
src/workflow/: CMakeLists.txt  CreateSetDb.cpp  DownloadDb.cpp  DownloadGbPhage.cpp  DownloadGenome.cpp  EasyPredict.cpp  PredictMatch.cpp
util/: run_regression.sh
